// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronLoans tests should load the details component 1`] = `
<Loader>
  <Error
    error={null}
  >
    <ResultsTable
      detailsClickHandler={[Function]}
      name="User's loan requests"
      rows={Array []}
      showAllClickHandler={
        Object {
          "handler": [Function],
          "params": 2,
        }
      }
      showMaxRows={5}
    />
  </Error>
</Loader>
`;

exports[`PatronLoans tests should render patron loans 1`] = `
<PatronLoans
  data={
    Array [
      Object {
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
      Object {
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan2",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
    ]
  }
  fetchPatronLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          null,
          null,
          null,
          2,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  history={[Function]}
  loanState=""
  patron={2}
  showMaxLoans={5}
>
  <Loader>
    <Error
      error={null}
    >
      <ResultsTable
        detailsClickHandler={[Function]}
        name="User's loan requests"
        rows={
          Array [
            Object {
              "End_date": "1/1/2018",
              "ID": "loan1",
              "Item PID": undefined,
              "Start_date": "1/1/2018",
              "State": undefined,
            },
            Object {
              "End_date": "1/1/2018",
              "ID": "loan2",
              "Item PID": undefined,
              "Start_date": "1/1/2018",
              "State": undefined,
            },
          ]
        }
        showAllClickHandler={
          Object {
            "handler": [Function],
            "params": 2,
          }
        }
        showMaxRows={5}
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Header
              as="h3"
            >
              <h3
                className="ui header"
              >
                User's loan requests
              </h3>
            </Header>
            <Table
              as="table"
              selectable={true}
              singleLine={true}
              striped={true}
            >
              <table
                className="ui selectable single line striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Item PID",
                      "State",
                      "Start_date",
                      "End_date",
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                            >
                              <th
                                className="collapsing"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Item PID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Item PID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Start_date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Start_date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="End_date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                End_date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Item PID",
                      "State",
                      "Start_date",
                      "End_date",
                    ]
                  }
                  detailsClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "End_date": "1/1/2018",
                        "ID": "loan1",
                        "Item PID": undefined,
                        "Start_date": "1/1/2018",
                        "State": undefined,
                      },
                      Object {
                        "End_date": "1/1/2018",
                        "ID": "loan2",
                        "Item PID": undefined,
                        "Start_date": "1/1/2018",
                        "State": undefined,
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            key="details"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-test="ID-loan1"
                            >
                              loan1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Item PID-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-test="Item PID-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-test="State-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start_date-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-test="Start_date-loan1"
                            >
                              1/1/2018
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="End_date-loan1"
                            key="4-loan1"
                          >
                            <td
                              className=""
                              data-test="End_date-loan1"
                            >
                              1/1/2018
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan2"
                        key="loan2"
                      >
                        <tr
                          className=""
                          data-test="loan2"
                        >
                          <TableCell
                            as="td"
                            key="details"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan2"
                            key="0-loan2"
                          >
                            <td
                              className=""
                              data-test="ID-loan2"
                            >
                              loan2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Item PID-loan2"
                            key="1-loan2"
                          >
                            <td
                              className=""
                              data-test="Item PID-loan2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan2"
                            key="2-loan2"
                          >
                            <td
                              className=""
                              data-test="State-loan2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start_date-loan2"
                            key="3-loan2"
                          >
                            <td
                              className=""
                              data-test="Start_date-loan2"
                            >
                              1/1/2018
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="End_date-loan2"
                            key="4-loan2"
                          >
                            <td
                              className=""
                              data-test="End_date-loan2"
                            >
                              1/1/2018
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  showAllClickHandler={
                    Object {
                      "handler": [Function],
                      "params": 2,
                    }
                  }
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PatronLoans>
`;

exports[`PatronLoans tests should render show a message with no user loans 1`] = `
<PatronLoans
  data={Array []}
  fetchPatronLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          null,
          null,
          null,
          2,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  history={[Function]}
  loanState=""
  patron={2}
  showMaxLoans={5}
>
  <Loader>
    <Error
      error={null}
    >
      <ResultsTable
        detailsClickHandler={[Function]}
        name="User's loan requests"
        rows={Array []}
        showAllClickHandler={
          Object {
            "handler": [Function],
            "params": 2,
          }
        }
        showMaxRows={5}
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Header
              as="h3"
            >
              <h3
                className="ui header"
              >
                User's loan requests
              </h3>
            </Header>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
                User's loan requests
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PatronLoans>
`;

exports[`PatronLoans tests should render the show all button when showing only a few patron loans 1`] = `
<PatronLoans
  data={
    Array [
      Object {
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
      Object {
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan2",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
    ]
  }
  fetchPatronLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          null,
          null,
          null,
          2,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  history={[Function]}
  patron={2}
  showMaxLoans={1}
>
  <Loader>
    <Error
      error={null}
    >
      <ResultsTable
        detailsClickHandler={[Function]}
        name="User's loan requests"
        rows={
          Array [
            Object {
              "End_date": "1/1/2018",
              "ID": "loan1",
              "Item PID": undefined,
              "Start_date": "1/1/2018",
              "State": undefined,
            },
            Object {
              "End_date": "1/1/2018",
              "ID": "loan2",
              "Item PID": undefined,
              "Start_date": "1/1/2018",
              "State": undefined,
            },
          ]
        }
        showAllClickHandler={
          Object {
            "handler": [Function],
            "params": 2,
          }
        }
        showMaxRows={1}
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Header
              as="h3"
            >
              <h3
                className="ui header"
              >
                User's loan requests
              </h3>
            </Header>
            <Table
              as="table"
              selectable={true}
              singleLine={true}
              striped={true}
            >
              <table
                className="ui selectable single line striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Item PID",
                      "State",
                      "Start_date",
                      "End_date",
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                            >
                              <th
                                className="collapsing"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Item PID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Item PID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Start_date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Start_date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="End_date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                End_date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Item PID",
                      "State",
                      "Start_date",
                      "End_date",
                    ]
                  }
                  detailsClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "End_date": "1/1/2018",
                        "ID": "loan1",
                        "Item PID": undefined,
                        "Start_date": "1/1/2018",
                        "State": undefined,
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            key="details"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-test="ID-loan1"
                            >
                              loan1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Item PID-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-test="Item PID-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-test="State-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start_date-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-test="Start_date-loan1"
                            >
                              1/1/2018
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="End_date-loan1"
                            key="4-loan1"
                          >
                            <td
                              className=""
                              data-test="End_date-loan1"
                            >
                              1/1/2018
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  showAllClickHandler={
                    Object {
                      "handler": [Function],
                      "params": 2,
                    }
                  }
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={6}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={6}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={6}
                                >
                                  <span>
                                    Showing first 
                                    1
                                     entries of
                                     
                                    2
                                  </span>
                                  <span>
                                     
                                    <Button
                                      as="button"
                                      onClick={[Function]}
                                      size="small"
                                    >
                                      <button
                                        className="ui small button"
                                        onClick={[Function]}
                                      >
                                        Show all
                                      </button>
                                    </Button>
                                  </span>
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PatronLoans>
`;
